# issp-c

./: CMakeLists.txt  README.md
examples/: 01_casting.c  02_arrays.c  03_strings.c  04_pointers.c  05_array_pointers.c  08_struct.c  CMakeLists.txt
exercises/: 00_otp.c  01_mac.c  02_stream.c  CMakeLists.txt
exercises/solutions/: 00_otp.c  01_mac.c  02_stream.c
hackmes/: 00.c  01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  README.md
hackmes/solutions/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt
hackmes/util/: util.c  util.h
