set(PREFIX "example-")
file(GLOB ISSP_SOURCES CONFIGURE_DEPENDS "${ISSP_EXAMPLES_DIR}/*.c")

foreach(ISSP_SOURCE ${ISSP_SOURCES})
    get_filename_component(ISSP_TARGET "${ISSP_SOURCE}" NAME_WE)
    string(REPLACE "_" "-" ISSP_TARGET "${ISSP_TARGET}")
    string(PREPEND ISSP_TARGET "${PREFIX}")
    add_executable("${ISSP_TARGET}")
    target_sources("${ISSP_TARGET}" PRIVATE "${ISSP_SOURCE}")
    target_compile_features("${ISSP_TARGET}" PRIVATE ${ISSP_COMPILE_FEATURES})
    target_compile_options("${ISSP_TARGET}" PRIVATE ${ISSP_SANITIZER_OPTIONS} ${ISSP_WARNING_OPTIONS})
    target_link_options("${ISSP_TARGET}" PRIVATE ${ISSP_SANITIZER_OPTIONS})
    if(ISSP_CLANG_TIDY)
        clang_tidy_check("${ISSP_TARGET}")
    endif()
endforeach()
